# PT-JPL-SM

./: .gitignore  Makefile  PTJPLSM Sensitivity with AJ Dataset copy.ipynb  PTJPLSM Sensitivity with ECOv002 Cal-Val.ipynb  PTJPLSM Sensitivity.ipynb  README.md  Tower Input Data.ipynb  pyproject.toml  table.md  usage.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
PTJPLSM/: ECOv002-cal-val-PT-JPL-SM-inputs.csv  ECOv002-cal-val-PT-JPL-SM-outputs.csv  ECOv002-static-tower-PT-JPL-SM-inputs.csv  ECOv002_calval_PTJPLSM_inputs.py  ECOv002_static_tower_PTJPLSM_inputs.py  PTJPLSM.py  __init__.py  constants.py  generate_PTJPLSM_inputs.py  model.py  process_PTJPLSM_table.py  verify.py  version.py
PTJPLSM/partitioning/: canopy_latent_heat_flux.py  fREW.py  fTRM.py  partitioning.py  soil_latent_heat_flux.py
notebooks/: PTJPLSM Sensitivity with ECOv002 Cal-Val Daily ET.ipynb  PTJPLSM Sensitivity with ECOv002 Cal-Val.ipynb  Tower Input Data for PT-JPL-SM from ECOSTRESS Collection 2 Cal-Val copy.ipynb  Tower Input Data for PT-JPL-SM from ECOSTRESS Collection 2 Cal-Val.ipynb  Tower Static Input Data for PT-JPL-SM from ECOSTRESS Collection 2 Cal-Val.ipynb
tests/: test_import_PTJPLSM.py  test_import_dependencies.py  test_verify.py
