[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "PTJPLSM"
version = "1.0.0"
description = "Priestley-Taylor Jet Propulsion Laboratory Soil Moisutre Evapotranspiration Model"
readme = "README.md"
authors = [
    { name = "Gregory Halverson", email = "gregory.h.halverson@jpl.nasa.gov" },
    { name = "Joshua B. Fisher", email = "jbfisher@chapman.edu" },
    { name = "Claire S. Villanueva-Weeks, email = "claire.s.villanueva-weeks@jpl.gov" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "pillow",
    "keras", 
    "geopandas",
    "h5py",
    "matplotlib",
    "numpy",
    "pandas",
    "pygeos",
    "pyproj",
    "rasterio",
    "requests", 
    "shapely",
    "scikit-image",  # Corrected package name
    "affine",
    "astropy",
    "pyresample",
    "scipy",
    "six",
    "soilgrids",
    "urllib3",
]
requires-python = ">=3.10"

[project.optional-dependencies]
macos = [
    "pykdtree @ git+https://github.com/storpipfugl/pykdtree.git",
]