[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "PTJPLSM"
version = "1.4.0"
description = "Priestley-Taylor Jet Propulsion Laboratory Soil Moisutre Evapotranspiration Model"
readme = "README.md"
authors = [
    { name = "Gregory Halverson", email = "gregory.h.halverson@jpl.nasa.gov" },
    { name = "Joshua B. Fisher", email = "jbfisher@chapman.edu" },
    { name = "Claire S. Villanueva-Weeks", email = "claire.s.villanueva-weeks@jpl.gov" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "check-distribution",
    "ECOv002-CMR>=1.0.5",
    "ECOv002-granules>=1.0.3",
    "ECOv003-granules",
    "gedi-canopy-height",
    "GEOS5FP>=1.1.1",
    "monte-carlo-sensitivity",
    "numpy",
    "pandas",
    "PTJPL>=1.4.3",
    "rasters>=1.7.0",
    "scikit-learn",
    "seaborn",
    "SEBAL-soil-heat-flux",
    "soil-capacity-wilting>=1.2.0",
    "solar-apparent-time",
    "verma-net-radiation>=1.3.0"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "build",
    "pytest>=6.0",
    "pytest-cov",
    "jupyter",
    "pytest",
    "twine"
]

[tool.setuptools.package-data]
PTJPLSM = ["*.txt", "*.tif"]

[project.urls]
"Homepage" = "https://github.com/JPL-Evapotranspiration-Algorithms/PTJPLSM"
